Update Bank Marketing Data Set Project .ipynb

--- a/Bank Marketing Data Set Project .ipynb
+++ b/Bank Marketing Data Set Project .ipynb
@@ -2651,7 +2651,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ................... Finished ......................."
+    "## ................... Completed ......................."
    ]
   }
  ],
